--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
     implementation "com.facebook.stetho:stetho:1.5.0"
     implementation "com.facebook.stetho:stetho-okhttp3:1.5.0"
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
+
+    //Images
+    implementation'com.squareup.picasso:picasso:2.71828'
 }
